--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ submitit
 scipy
 termcolor
 addict
-yapf
+yapf==0.40.1
 timm
 torch
 torchvision
@@ -13,5 +13,4 @@ opencv-python
 supervision==0.6.0
 pycocotools
 pyyaml>3.10
-h5py>3.0
 colorlog
